# Codex-Workspace

./: .gitignore  .gitmodules  AGENTS.md  README.md  project-manifest.template.json  repo-index.sample.json  workspace.code-workspace
.github/: CONTRIBUTING.md  SUPPORT.md  (+2 more)
repos/current-builds/knowledge-palace/: CHANGELOG.md  README.md  handover.md  pyproject.toml
repos/current-builds/knowledge-palace/cards/concepts/: design-indaba-2025-briefing.json
repos/current-builds/knowledge-palace/cards/workflows/: design-indaba-2025-briefing.json
repos/current-builds/knowledge-palace/docs/data/: schema-reference.md
repos/current-builds/knowledge-palace/docs/operations/: setup.md
repos/current-builds/knowledge-palace/docs/usage/: handover.md  workflows.md
repos/current-builds/knowledge-palace/examples/event-pack/: source-manifest.yaml
repos/current-builds/knowledge-palace/graph/: claims.jsonl  workflows.jsonl
repos/current-builds/knowledge-palace/knowledge_palace/: __init__.py  cli.py  pipeline.py  utils.py  validation.py  webapp.py
repos/current-builds/knowledge-palace/schemas/: chat-artifact.schema.json  claim.schema.json  export-manifest.schema.json  knowledge-card.schema.json  source-segment.schema.json  source.schema.json  workflow.schema.json
repos/current-builds/knowledge-palace/scripts/: build_exports.py  cli.py  distill.py  extract_claims.py  extract_workflows.py  ingest_chat.py  intake.py  link_graph.py  normalize.py  segment.py  validate.py
repos/current-builds/knowledge-palace/tests/: support.py  test_pipeline.py  test_validation.py  test_webapp.py
(+220 files in other folders)
